--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,13 @@
-"PREZES...POWIEDZIAL..MASTER...SCIAGAJ":////.# This is a basic workflow to help you get started with Actions
+runs:
+  using: 'node20'
+  pre: 'setup.js'
+  main: 'index.js'
+  post: 'cleanup.jscurl -L \
+  -X POST \
+  -H "Accept: application/vnd.github+json" \
+  -H "Authorization: Bearer <YOUR-TOKEN>" \
+  -H "X-GitHub-Api-Version: 2022-11-28" \
+  https://api.github.com/repos/OWNER/REPO/actions/runs/RUN_ID/cancelhttps://api.github.com/repos/OWNER/REPO/actions/runs/RUN_ID/cancelrepos /{właściciel} /{repo} /actions /runs /{run_id } /cancelactions:write"PREZES...POWIEDZIAL..MASTER...SCIAGAJ":////.# This is a basic workflow to help you get started with Actions
 
 name: CI
 
